# tap-meltano

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml  tap-meltano.sh  tox.ini
tap_meltano/: client.py  streams.py  tap.py
tap_meltano/tests/: __init__.py  test_core.py  test_tap.py
tap_meltano/tests/example_database/: meltano.db
