[tool.poetry]
name = "tap-meltano"
version = "0.5.0"
description = "`tap-meltano` is a Singer tap for meltano, built with the Meltano SDK for Singer Taps."
authors = ["Daniel Walker"]
keywords = [
    "ELT",
    "meltano",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
singer-sdk = "^0.44.0"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
tox = "^4.24.1"
flake8 = "^7.1.1"
black = "^24.10"
pydocstyle = "^6.1.1"
mypy = "^1.14"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_meltano"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-meltano = 'tap_meltano.tap:TapMeltano.cli'
