[tool.poetry]
name = "tap-meltano"
version = "0.5.0"
description = "`tap-meltano` is a Singer tap for meltano, built with the Meltano SDK for Singer Taps."
authors = ["Daniel Walker"]
keywords = [
    "ELT",
    "meltano",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.5"
singer-sdk = "^0.48.1"
sqlalchemy = "^2.0.44"
psycopg2-binary = "^2.9.11"

[tool.poetry.dev-dependencies]
pytest = "^8.4.2"
tox = "^4.30.3"
flake8 = "^7.3.0"
black = "^25.11"
pydocstyle = "^6.1.1"
mypy = "^1.18"
isort = "^6.1.0"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_meltano"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-meltano = 'tap_meltano.tap:TapMeltano.cli'
